k8s-temp/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-app-deployment
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
        - name: backend
          image: 292578125952.dkr.ecr.ap-south-1.amazonaws.com/todo-app-backend:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
