k8s-temp/service.yml
apiVersion: v1
kind: Service

metadata:
  name: todo-app-backend-svc
  namespace: todo-app
spec:
  selector:
    app: todo-app-backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
